bpo-46527: allow calling enumerate(iterable=...) again

As mentioned in the issue, this fixes a regression in 3.11.

The regression was introduced in GH-25154 (bpo-43706). There were already
comments there about how this was too much code for a simple change. This
makes it even worse.