Objects/enumobject.c
@@ -91,15 +91,11 @@ enumerate_vectorcall(PyObject *type, PyObject *const *args,
     PyTypeObject *tp = _PyType_CAST(type);
     Py_ssize_t nargs = PyVectorcall_NARGS(nargsf);
     Py_ssize_t nkwargs = 0;
-    if (nargs == 0) {
-        PyErr_SetString(PyExc_TypeError,
-            "enumerate() missing required argument 'iterable'");
-        return NULL;
-    }
     if (kwnames != NULL) {
         nkwargs = PyTuple_GET_SIZE(kwnames);
     }
 
+    // Manually implement enumerable(iterable, start=...)
     if (nargs + nkwargs == 2) {
         if (nkwargs == 1) {
             PyObject *kw = PyTuple_GET_ITEM(kwnames, 0);
@@ -108,12 +104,48 @@ enumerate_vectorcall(PyObject *type, PyObject *const *args,
                     "'%S' is an invalid keyword argument for enumerate()", kw);
                 return NULL;
             }
+        } else if (nkwargs == 2) {
+            PyObject *kw0 = PyTuple_GET_ITEM(kwnames, 0);
+            PyObject *kw1 = PyTuple_GET_ITEM(kwnames, 1);
+            if (_PyUnicode_EqualToASCIIString(kw0, "start")) {
+                if (!_PyUnicode_EqualToASCIIString(kw1, "iterable")) {
+                    PyErr_Format(PyExc_TypeError,
+                        "'%S' is an invalid keyword argument for enumerate()", kw1);
+                    return NULL;
+                }
+                return enum_new_impl(tp, args[1], args[0]);
+            }
+            if (!_PyUnicode_EqualToASCIIString(kw0, "iterable")) {
+                PyErr_Format(PyExc_TypeError,
+                    "'%S' is an invalid keyword argument for enumerate()", kw0);
+                return NULL;
+            }
+            if (!_PyUnicode_EqualToASCIIString(kw1, "start")) {
+                PyErr_Format(PyExc_TypeError,
+                    "'%S' is an invalid keyword argument for enumerate()", kw1);
+                return NULL;
+            }
+
         }
         return enum_new_impl(tp, args[0], args[1]);
     }
 
-    if (nargs == 1 && nkwargs == 0) {
+    if (nargs + nkwargs == 1) {
+        if (nkwargs == 1) {
+            PyObject *kw0 = PyTuple_GET_ITEM(kwnames, 0);
+            if (!_PyUnicode_EqualToASCIIString(kw0, "iterable")) {
+                PyErr_Format(PyExc_TypeError,
+                    "'%S' is an invalid keyword argument for enumerate()", kw0);
+                return NULL;
+            }
+        }
         return enum_new_impl(tp, args[0], NULL);
+    }
+
+    if (nargs == 0) {
+        PyErr_SetString(PyExc_TypeError,
+            "enumerate() missing required argument 'iterable'");
+        return NULL;
     }
 
     PyErr_Format(PyExc_TypeError,
